# authorization_microservice

./: .gitignore  .gitlab-ci.yml  docker-compose.yml
docker/dev/env/: .env
docker/dev/web/: Dockerfile
docker/modules/: mailhog.yml  rabbitmq.yml
docker/modules/rabbitmq/: .env
docker/prod/env/: .data.env
docker/prod/web/: Dockerfile
web/: conftest.py  pyproject.toml
web/api/v1/: urls.py
web/api/v1/auth_app/: authentication_classes.py  forms.py  jwt_auth.py  serializers.py  services.py  swagger_schemas.py  urls.py  views.py
web/api/v1/auth_app/templates/includes/: reset_password_email_link.html
web/api/v1/auth_app/tests/: test_views.py
web/api/v1/profile_app/: permissions.py  serializers.py  urls.py  views.py
web/auth_app/: jwt_auth.py
web/main/: admin.py  choices.py  decorators.py  managers.py  models.py  services.py  tasks.py
web/main/migrations/: 0003_user_phone_number.py  0004_user_gender.py  0005_user_birthday.py  0006_user_avatar.py  0007_address.py  0008_auto_20220520_1212.py  0009_alter_user_date_joined.py  0010_auto_20220520_1647.py  0011_auto_20220522_2102.py  0012_alter_user_email.py  0013_auto_20220701_1411.py  0014_auto_20220701_1547.py  0015_alter_user_gender.py
web/src/: settings.py  urls.py
web/src/additional_settings/: celery_settings.py
web/src/requirements/: base.txt  local.txt
